crates/sid-widgets/src/settings/snapshots/sid_widgets__settings__quick_actions__tests__quick_actions_render_focused.snap
---
source: crates/sid-widgets/src/settings/quick_actions.rs
expression: s
---
┌ Quick actions ───────────────────────────────────────────┐
│> qa.test          Test                 [-]               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
border_top_left: fg=Rgb(212, 65, 65) modifier=NONE
title_first_char: symbol="Q" fg=Rgb(230, 230, 240) modifier=BOLD
